successfully fetching movie info and displaying a card component for each movie

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+
+.movieCard {
+  background-color: #61dafb;
+  font-size: 2rem;
+  padding: 10px;
+  width: 200px;
+}
