--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,18 @@
 
 
 .movieCard {
-  background-color: #61dafb;
-  font-size: 2rem;
-  padding: 10px;
-  width: 200px;
+  /* background-color: #61dafb; */
+  /* font-size: 2rem; */
+  /* padding: 2rem; */
+  margin: 2rem;
+  text-align: left;
+  line-height: .5rem;
 }
+.release-date {
+  font-style: italic;
+}
+
+/* .movieCardBody {
+  background-color: rgb(250, 239, 220);
+  padding: .5rem 0;
+} */
