--- a/src/App.css
+++ b/src/App.css
@@ -48,19 +48,17 @@
 }
 
 .movieDetailsCard {
-  margin: 2rem;
   text-align: left;
   display: grid;
   place-items: center;
 }
 
 .movieDetailsText {
-  background-color: rgba(0, 0, 0, 0.70);
-  color: white;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: whitesmoke;
   width: 70%;
-  padding: 1rem;
-  border-radius: 2rem
-  
+  padding: 3rem;
+  border-radius: 1.5rem;
 }
 
 .release-date {
